<resources>
    <string name="app_name">GroceryList</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="hint_Item">Hint Item</string>
    <string name="quantity_hint">quantity hint</string>
    <string name="save_title">save title</string>
    <string name="title_activity_list_activities">ListActivities</string>
    <string name="sure_text">Are you sure</string>
    <string name="no">No</string>
    <string name="yes">yes</string>
</resources>
